--- a/examples-generated/database/v1alpha1/externaldatabaseconnector.yaml
+++ b/examples-generated/database/v1alpha1/externaldatabaseconnector.yaml
@@ -27,8 +27,6 @@ spec:
     connectorType: ${var.external_database_connector_connector_type}
     definedTags: ${var.external_database_connector_defined_tags}
     displayName: ${var.external_database_connector_display_name}
-    externalDatabaseIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: test_database
+    externalDatabaseId: ${oci_database_database.test_database.id}
     freeformTags:
       Department: Finance
