--- a/examples-generated/database/v1alpha1/keystore.yaml
+++ b/examples-generated/database/v1alpha1/keystore.yaml
@@ -8,9 +8,7 @@ metadata:
   name: test-key-store
 spec:
   forProvider:
-    compartmentIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    compartmentId: ${var.compartment_id}
     definedTags: ${var.key_store_defined_tags}
     displayName: ${var.key_store_display_name}
     freeformTags:
