--- a/examples-generated/database/v1alpha1/externalnoncontainerdatabase.yaml
+++ b/examples-generated/database/v1alpha1/externalnoncontainerdatabase.yaml
@@ -8,9 +8,7 @@ metadata:
   name: test-external-non-container-database
 spec:
   forProvider:
-    compartmentIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    compartmentId: ${var.compartment_id}
     definedTags: ${var.external_non_container_database_defined_tags}
     displayName: ${var.external_non_container_database_display_name}
     freeformTags:
