--- a/examples-generated/database/v1alpha1/externalpluggabledatabase.yaml
+++ b/examples-generated/database/v1alpha1/externalpluggabledatabase.yaml
@@ -8,14 +8,10 @@ metadata:
   name: test-external-pluggable-database
 spec:
   forProvider:
-    compartmentIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    compartmentId: ${var.compartment_id}
     definedTags: ${var.external_pluggable_database_defined_tags}
     displayName: ${var.external_pluggable_database_display_name}
-    externalContainerDatabaseIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: test_external_container_database
+    externalContainerDatabaseId: ${oci_database_external_container_database.test_external_container_database.id}
     freeformTags:
       Department: Finance
     sourceId: ${oci_database_source.test_source.id}
