--- a/examples-generated/database/v1alpha1/maintenancerun.yaml
+++ b/examples-generated/database/v1alpha1/maintenancerun.yaml
@@ -8,9 +8,7 @@ metadata:
   name: test-maintenance-run
 spec:
   forProvider:
-    compartmentIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    compartmentId: ${var.compartment_id}
     databaseSoftwareImageId: ${oci_database_database_software_image.test_database_software_image.id}
     isDstFileUpdateEnabled: ${var.maintenance_run_is_dst_file_update_enabled}
     patchType: ${var.maintenance_run_patch_type}
