--- a/examples-generated/database/v1alpha1/vmclusternetwork.yaml
+++ b/examples-generated/database/v1alpha1/vmclusternetwork.yaml
@@ -8,9 +8,7 @@ metadata:
   name: test-vm-cluster-network
 spec:
   forProvider:
-    compartmentIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: example
+    compartmentId: ${var.compartment_id}
     definedTags: ${var.vm_cluster_network_defined_tags}
     displayName: ${var.vm_cluster_network_display_name}
     dns: ${var.vm_cluster_network_dns}
@@ -18,9 +16,7 @@ spec:
     - hostname: ${var.vm_cluster_network_dr_scans_hostname}
       ips: ${var.vm_cluster_network_dr_scans_ips}
       scanListenerPortTcp: ${var.vm_cluster_network_dr_scans_scan_listener_port_tcp}
-    exadataInfrastructureIdSelector:
-      matchLabels:
-        testing.upbound.io/example-name: test_exadata_infrastructure
+    exadataInfrastructureId: ${oci_database_exadata_infrastructure.test_exadata_infrastructure.id}
     freeformTags:
       Department: Finance
     ntp: ${var.vm_cluster_network_ntp}
